// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-icon> Component basic usage 1`] = `
<bolt-icon name="add-open"
           background="square"
           size="medium"
           color="teal"
>
</bolt-icon>
`;

exports[`<bolt-icon> Component basic usage with attributes 1`] = `
<bolt-icon style="--bolt-theme-icon-background: #e64b18; --bolt-theme-icon: #FFF; --bolt-theme-icon-background-opacity: 1;"
           name="add-open"
           background="square"
           size="medium"
           color="teal"
>
</bolt-icon>
`;
